# token-2022

clients/rust-legacy/tests/: confidential_transfer.rs
confidential/ciphertext-arithmetic/: Cargo.toml
confidential/ciphertext-arithmetic/src/: lib.rs
confidential/elgamal-registry/: Cargo.toml
confidential/elgamal-registry-interface/: Cargo.toml
confidential/proof-extraction/: Cargo.toml
confidential/proof-generation/: Cargo.toml
confidential/proof-generation/src/: burn.rs  mint.rs  transfer.rs  transfer_with_fee.rs  withdraw.rs
confidential/proof-tests/: Cargo.toml
interface/: Cargo.toml
interface/src/extension/confidential_transfer/: instruction.rs  mod.rs
interface/tests/: serialization.rs
program/: Cargo.toml
program/src/extension/confidential_transfer/: processor.rs
program/src/extension/confidential_transfer_fee/: processor.rs
