[package]
name = "spl-token-confidential-transfer-proof-generation"
version = "0.5.1"
description = "Solana Program Library Confidential Transfer Proof Generation"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
curve25519-dalek = "4.1.3"
solana-zk-sdk = { path = "../../../zk-elgamal-proof/zk-sdk" }
solana-zk-sdk-pod = { path = "../../../zk-elgamal-proof/zk-sdk-pod" }
solana-zk-elgamal-proof-interface = { path = "../../../zk-elgamal-proof/interface" }
thiserror = "2.0.18"

[lints]
workspace = true
